[package]
name = "pime"
version = "0.0.10"
edition = "2018"
authors = ["Sergei S. <div@altertech.com>"]
license = "MIT"
description = "Rust Python Integration Made Easy"
readme = "README.md"
keywords = ["python"]
autoexamples = false

[lib]
name = "pime"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.14.1" }
lazy_static = "1.4.0"
serde-value = "0.7.0"
pythonize = "0.14.0"
log = "0.4.13"
tokio = { version = "1.9", features = ["sync"] }
triggered = "0.1.2"
