[package]
name = "hyper-example"
version = "0.1.0"
authors = ["Sergei S. <div@altertech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
pyo3 = { version = "0.14.1" }
serde-value = "0.7.0"
pime = { path = "../.." }
